# ModernCppStarter

./: .gitignore  CMakeLists.txt  command
.github/workflows/: macos.yml  standalone.yml
all/: CMakeLists.txt
include/greeter/net/: greeter.h
include/greeter/util/: myfunction.h
source/: greeter.cpp
source/net/: CMakeLists.txt  greeter.cpp
source/util/: CMakeLists.txt  myfunction.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp
